{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 40,
  "lineage": "7d7d89eb-6f87-5f20-4a72-8a755b81e6f5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:loadbalancer/app/dev-edion-isp-private-elb/0d084e8d89868d77",
            "arn_suffix": "app/dev-edion-isp-private-elb/0d084e8d89868d77",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-dev-edion-isp-private-elb-1807166561.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:loadbalancer/app/dev-edion-isp-private-elb/0d084e8d89868d77",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-edion-isp-private-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-026000c5dfb39753d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b7f1190551eb44c3"
              },
              {
                "subnet_id": "subnet-0d5f0e4323ee4bb69"
              }
            ],
            "subnets": [
              "subnet-0b7f1190551eb44c3",
              "subnet-0d5f0e4323ee4bb69"
            ],
            "vpc_id": "vpc-007decc2da7f75ad1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "alb_support",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:loadbalancer/app/dev-support-web/7797b2431c1c1c2f",
            "arn_suffix": "app/dev-support-web/7797b2431c1c1c2f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-support-web-1661405426.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:loadbalancer/app/dev-support-web/7797b2431c1c1c2f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-support-web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-026000c5dfb39753d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b7f1190551eb44c3"
              },
              {
                "subnet_id": "subnet-0d5f0e4323ee4bb69"
              }
            ],
            "subnets": [
              "subnet-0b7f1190551eb44c3",
              "subnet-0d5f0e4323ee4bb69"
            ],
            "vpc_id": "vpc-007decc2da7f75ad1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "https_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener/app/dev-edion-isp-private-elb/0d084e8d89868d77/55def80a727c4aec",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:555516925462:certificate/ee115ed1-8f32-4a5e-ada5-71f236e28702",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/dev-manage-tg-1-green/58cba45f6122bf52",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/dev-manage-tg-1-green/58cba45f6122bf52",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener/app/dev-edion-isp-private-elb/0d084e8d89868d77/55def80a727c4aec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:loadbalancer/app/dev-edion-isp-private-elb/0d084e8d89868d77",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "https_443_support",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener/app/dev-support-web/7797b2431c1c1c2f/2709d65c3894ae26",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:555516925462:certificate/ee115ed1-8f32-4a5e-ada5-71f236e28702",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/dev-support-web-green/635ac6986e1b0c53",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/dev-support-web-green/635ac6986e1b0c53",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener/app/dev-support-web/7797b2431c1c1c2f/2709d65c3894ae26",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:loadbalancer/app/dev-support-web/7797b2431c1c1c2f",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "manage_domain_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-ma-dev-tg-green/286758f8b46fc8a3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener-rule/app/dev-edion-isp-private-elb/0d084e8d89868d77/55def80a727c4aec/dca62f3e223b505f",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "manage.domain"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener-rule/app/dev-edion-isp-private-elb/0d084e8d89868d77/55def80a727c4aec/dca62f3e223b505f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener/app/dev-edion-isp-private-elb/0d084e8d89868d77/55def80a727c4aec",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_lb.alb",
            "data.aws_lb_listener.https_443",
            "module.load_balancer.aws_lb_target_group.target_groups"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "manage_domain_rule_support",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-re-dev-tg-green/facba3e39b8f01cd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener-rule/app/dev-support-web/7797b2431c1c1c2f/2709d65c3894ae26/24f4483b813b4ee9",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "registration.domain"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener-rule/app/dev-support-web/7797b2431c1c1c2f/2709d65c3894ae26/24f4483b813b4ee9",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:listener/app/dev-support-web/7797b2431c1c1c2f/2709d65c3894ae26",
            "priority": 20,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_lb.alb_support",
            "data.aws_lb_listener.https_443_support",
            "module.load_balancer.aws_lb_target_group.target_groups"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "manage-blue",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-ma-dev-tg-blue/2c1044b8bb64fd21",
            "arn_suffix": "targetgroup/edion-net-app-ma-dev-tg-blue/2c1044b8bb64fd21",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-ma-dev-tg-blue/2c1044b8bb64fd21",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "edion-net-app-ma-dev-tg-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-007decc2da7f75ad1"
          }
        },
        {
          "index_key": "manage-green",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-ma-dev-tg-green/286758f8b46fc8a3",
            "arn_suffix": "targetgroup/edion-net-app-ma-dev-tg-green/286758f8b46fc8a3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-ma-dev-tg-green/286758f8b46fc8a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "edion-net-app-ma-dev-tg-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-007decc2da7f75ad1"
          }
        },
        {
          "index_key": "registration-blue",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-re-dev-tg-blue/14d8b3960fcc73bd",
            "arn_suffix": "targetgroup/edion-net-app-re-dev-tg-blue/14d8b3960fcc73bd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-re-dev-tg-blue/14d8b3960fcc73bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "edion-net-app-re-dev-tg-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-007decc2da7f75ad1"
          }
        },
        {
          "index_key": "registration-green",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-re-dev-tg-green/facba3e39b8f01cd",
            "arn_suffix": "targetgroup/edion-net-app-re-dev-tg-green/facba3e39b8f01cd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:555516925462:targetgroup/edion-net-app-re-dev-tg-green/facba3e39b8f01cd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "edion-net-app-re-dev-tg-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-007decc2da7f75ad1"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edion_net_app_ecs_dev_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:555516925462:security-group/sg-0ae1e85aa2631797a",
            "description": "Security group for ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae1e85aa2631797a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Database access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026000c5dfb39753d"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026000c5dfb39753d"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026000c5dfb39753d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "edion-net-app-ecs-dev-sg",
            "name_prefix": "",
            "owner_id": "555516925462",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007decc2da7f75ad1"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}